// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`OutputModalRender snapshots empty query — renders all lines verbatim 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ › regex…                                                                                         │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
3 lines
   1 alpha
   2 beta
   3 gamma"
`;

exports[`OutputModalRender snapshots with matches — filters and highlights 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ › match                                                                                          │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
2 matches in 2 lines
   2 second match here
   4 another match"
`;

exports[`OutputModalRender snapshots no matches — empty state row 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ › ZZZ                                                                                            │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
0 matches in 0 lines
— no matches"
`;

exports[`OutputModalRender snapshots invalid regex — error status, no filter 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ › [oops                                                                                          │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
invalid regex
   1 alpha
   2 beta"
`;
